# rCore

./: Cargo.toml
crate/api/: Cargo.toml
crate/api/src/: lib.rs
crate/lkm/src/: lib.rs  manager.rs  structs.rs
kernel/: Cargo.toml  Makefile
kernel/src/: lib.rs
kernel/src/arch/aarch64/: mod.rs
kernel/src/arch/x86_64/: consts.rs  cpu.rs  memory.rs  mod.rs  paging.rs
kernel/src/arch/x86_64/interrupt/: handler.rs
kernel/src/lkm/: api.rs  kernelvm.rs  manager.rs  mod.rs  structs.rs
kernel/src/syscall/: lkm.rs
labs/lab1/: lab1analysis.md
module/: Cargo.toml  Makefile
module/src/: lib.rs
module/targets/: riscv64.json  x86_64.json
modules/hello_rust/: build.sh
modules/hello_rust/src/: lib.rs
tools/fill_symbols/: x86_64.sh
